--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.9.14",
-    "urix": "^0.1.0"
+    "mongoose": "^5.9.14"
   }
 }
